Update websites.html Better Link

--- a/websites.html
+++ b/websites.html
@@ -20,9 +20,7 @@
       padding: 0;
     }
 
-    html {
-      scroll-behavior: smooth;
-    }
+    html { scroll-behavior: smooth; }
 
     body {
       font-family: 'Inter', sans-serif;
@@ -132,9 +130,9 @@
 <body>
 
   <header>
-    <a href="/"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
+    <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
-      <a href="/">Home</a>
+      <a href="index.html#features">← Back to What You Get</a>
     </nav>
   </header>
 
@@ -143,9 +141,9 @@
   <section>
     <h1>Websites & Landing Pages</h1>
     <p>
-      Your online presence starts here. Whether you're a creator, entrepreneur, small business, or digital nomad — we’ll build a modern, mobile-friendly, and open-source powered website that matches your vision. Landing pages, portfolios, small business sites — you name it.
+      Need a professional, beautiful, and mobile-responsive website? We’ll work with you to build something that reflects your brand and achieves your goals — whether it’s a simple landing page, a personal portfolio, or a full-featured site.
     </p>
-    <a class="btn" href="/">← Back to 3dvr.tech</a>
+    <a class="btn" href="index.html#features">← Back to What You Get</a>
   </section>
 
   <footer>
