--- a/websites.html
+++ b/websites.html
@@ -143,7 +143,7 @@
     <p>
       Need a professional, beautiful, and mobile-responsive website? We’ll work with you to build something that reflects your brand and achieves your goals — whether it’s a simple landing page, a personal portfolio, or a full-featured site.
     </p>
-    <a class="btn" href="index.html#features">← Back to What You Get</a>
+    <a class="btn" href="index.html#features">← Back to 3dvr.tech</a>
   </section>
 
   <footer>
