Update websites.html adjust link words

--- a/websites.html
+++ b/websites.html
@@ -132,7 +132,7 @@
   <header>
     <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
-      <a href="index.html#features">← Back to What You Get</a>
+      <a href="index.html#features">← 3dvr.tech</a>
     </nav>
   </header>
 
