--- a/apps.html
+++ b/apps.html
@@ -132,7 +132,7 @@
   <header>
     <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
-      <a href="index.html#features">← Back to What You Get</a>
+      <a href="index.html#features">← 3dvr.tech</a>
     </nav>
   </header>
 
@@ -143,7 +143,7 @@
     <p>
       Beautiful apps start with clean, responsive design. Whether you're building for iOS, Android, or the web, we’ll create an app layout that reflects your brand and makes users want to stick around. Focused on usability, beauty, and function.
     </p>
-    <a class="btn" href="index.html#features">← Back to What You Get</a>
+    <a class="btn" href="index.html#features">← Back to 3dvr.tech</a>
   </section>
 
   <footer>
