--- a/support.html
+++ b/support.html
@@ -132,7 +132,7 @@
   <header>
     <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
-      <a href="index.html#features">← Back to What You Get</a>
+      <a href="index.html#features">← 3dvr.tech</a>
     </nav>
   </header>
 
@@ -144,7 +144,7 @@
       Got questions? Need help setting something up? Just want to talk through an idea?
       As a subscriber, you get unlimited tech support via email, chat, or call — for anything related to your website, app, hosting, or even open-source tools. We’re here to help, always.
     </p>
-    <a class="btn" href="index.html#features">← Back to What You Get</a>
+    <a class="btn" href="index.html#features">← Back to 3dvr.tech</a>
   </section>
 
   <footer>
