--- a/consulting.html
+++ b/consulting.html
@@ -132,7 +132,7 @@
   <header>
     <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
-      <a href="index.html#features">← Back to What You Get</a>
+      <a href="index.html#features">← 3dvr.tech</a>
     </nav>
   </header>
 
@@ -143,7 +143,7 @@
     <p>
       Sometimes you just need a real conversation. Whether it's 1-on-1 brainstorming, tech strategy, or project planning—we're here to talk. Get access to personalized advice and vision coaching from people who know how to build things.
     </p>
-    <a class="btn" href="index.html#features">← Back to What You Get</a>
+    <a class="btn" href="index.html#features">← Back to 3dvr.tech</a>
   </section>
 
   <footer>
