--- a/community.html
+++ b/community.html
@@ -132,7 +132,7 @@
   <header>
     <a href="index.html"><img src="3DVR.png" alt="3dvr.tech logo" /></a>
     <nav>
-      <a href="index.html#features">← Back to What You Get</a>
+      <a href="index.html#features">← 3dvr.tech</a>
     </nav>
   </header>
 
@@ -143,7 +143,7 @@
     <p>
       You're not alone. When you subscribe, you’re invited into a growing community of makers, dreamers, and doers. Share progress, get feedback, collaborate, and build alongside like-minded innovators—all committed to open-source creation and digital freedom.
     </p>
-    <a class="btn" href="index.html#features">← Back to What You Get</a>
+    <a class="btn" href="index.html#features">← Back to 3dvr.tech</a>
   </section>
 
   <footer>
